<resources>
    <string name="app_name">SIK-LIGTAS</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="register_text">Let us start creating your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number (+63)</string>
    <string name="signup_text">Sign Up</string>
    <string name="add_emergency_contact">Add Emergency Contact</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="sik_ligtas">SIK-LIGTAS</string>
    <string name="sign_up">Sign Up</string>
    <string name="time"><![CDATA[<Time>]]></string>
    <string name="name"><![CDATA[<Name>]]></string>
    <string name="location"><![CDATA[<Location>]]></string>
    <string name="phone"><![CDATA[<Phone>]]></string>
    <string name="sign_in_with_phone">Sign In with Phone</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_to_sik_ligtas">New to SIK-LIGTAS?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_with_email">SIGN UP WITH EMAIL</string>
    <string name="yes">YES</string>
    <string name="title_activity_side_nav">SideNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">CANCEL</string>
    <string name="dialog_title">We detected an unexpected collision</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">LOGOUT</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_name">Your Name</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_phone">Your Phone</string>
    <string name="help">Help</string>
    <string name="first_aid_instructions">FIRST AID INSTRUCTIONS</string>
    <string name="application_guide">APPLICATION GUIDE</string>
    <string name="credits">CREDITS</string>
    <string name="add_contacts">ADD CONTACTS</string>
    <string name="first_aid_guide">FIRST AID GUIDE</string>
    <string name="go_back">GO BACK</string>
    <string name="jacamile_louwie_i_nclemente_justine_lorenze_b_ncao_kharl_rhoy_c_nsagun_ivan_michael_r_ndomingo_neal_clarence_m_ncrisol_ryan_carlo_nbanag_jade_ross_napostol_bob_leo_a_ntolentino_marc_angelo_c_ndiaz_maklin_carl_d">Castro, Ryan Austin S.\nJacamile, Louwie I.\nClemente, Justine Lorenze B.\nCao, Kharl Rhoy C.\nSagun, Ivan Michael R.\nDomingo, Neal Clarence M.\nCrisol, Ryan Carlo A.\nBanag, Jade Ross D.\nApostol, Bob Leo A.\nTolentino, Marc Angelo C.\nDiaz, Maklin Carl D.</string>
    <string name="pearl_orient_solutions">PEARL ORIENT SOLUTIONS</string>
    <string name="created_by">CREATED BY</string>
    <string name="members">MEMBERS</string>
    <string name="how_to_use_app">HOW TO USE APP</string>
    <string name="simulate_collision">SIMULATE COLLISION</string>
    <string name="locate">LOCATE</string>
</resources>