<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splash_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="366dp">

        <TextView
            android:id="@+id/log_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24sp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/sik_ligtas"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/log_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/your_profile"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/log_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_text"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/your_name"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/log_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/your_email_address"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/log_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"

            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/your_phone"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_logout"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/ic_baseline_arrow_back_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="GO BACK"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/ic_baseline_help_outline_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/how_to_use_app"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emergency_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/ic_baseline_perm_contact_calendar_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/add_contacts"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/log_first_aid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_baseline_local_hospital_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/first_aid_guide"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginBottom="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/log_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_baseline_people_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/credits"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="#F2CC61"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </RelativeLayout>

</RelativeLayout>