<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splash_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="366dp">

        <TextView
            android:id="@+id/log_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="-4dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/members"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/log_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24sp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/sik_ligtas"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/log_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/created_by"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/log_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_text"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/pearl_orient_solutions"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/log_name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_text2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/jacamile_louwie_i_nclemente_justine_lorenze_b_ncao_kharl_rhoy_c_nsagun_ivan_michael_r_ndomingo_neal_clarence_m_ncrisol_ryan_carlo_nbanag_jade_ross_napostol_bob_leo_a_ntolentino_marc_angelo_c_ndiaz_maklin_carl_d"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="#F2CC61"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/go_back"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </RelativeLayout>

</RelativeLayout>