<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splash_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="366dp">

        <TextView
            android:textStyle="bold"
            android:id="@+id/reg_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24sp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/sik_ligtas"
            android:textColor="#FFFFFF"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/reg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:paddingEnd="10dp"
            android:id="@+id/reg_fullname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/reg_text"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="#03A9F4"
            android:textColorHighlight="#606060"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:paddingEnd="10dp"
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/reg_fullname"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="#03A9F4"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:paddingEnd="10dp"
            android:id="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/reg_email"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="#03A9F4"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/reg_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/reg_pass"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#03A9F4"
            android:textColorHighlight="#606060"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:gravity="end"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_phone"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="#F2CC61"
            android:gravity="center"
            android:paddingHorizontal="60dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="150dp" />

    </RelativeLayout>

</RelativeLayout>