<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    android:id="@+id/maps_act"
    android:background="@drawable/splash_bg">

    <RelativeLayout
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/nav_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/sik_ligtas"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menuBtn"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="#00000000"
            android:drawableEnd="@drawable/ic_baseline_menu_48"
            tools:ignore="SpeakableTextPresentCheck" />


    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/header_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        tools:context=".MapsActivity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="269dp"
        android:layout_below="@+id/map"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/day_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="#FFFFFF"
            android:textSize="48sp" />

        <TextView

            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/day_manager"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/curr_location"
            android:layout_below="@+id/userName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/LocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_btn"
                android:drawableStart="@drawable/ic_baseline_my_location_48"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:padding="30dp"
                android:text="@string/locate"
                android:textColor="#353839"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/curr_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:padding="16dp"
            android:text="@string/location"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />

    </RelativeLayout>

</RelativeLayout>